syntax = "proto3";
option go_package = "./;student_grpc";

package student_grpc;

service Student {
    rpc GetStudentReq(StudentRequest) returns (StudentResponse);
}

message StudentRequest {
    string student = 1;
    int32 age = 3;
    string faculty = 2;
    Discipline discipline = 4;
}

enum Discipline {
    swimming = 0;
    athletics = 1;
    boxing = 2;
}

message StudentResponse {
    bool success = 1;
}